[metadata]
name = SPARQLWrapper
version = attr: SPARQLWrapper.__version__
description = SPARQL Endpoint interface to Python
long_description = This is a wrapper around a SPARQL service. It helps in creating the query URI and, possibly, convert the result into a more manageable format.
license = W3C SOFTWARE NOTICE AND LICENSE
author = Ivan Herman, Sergio Fernández, Carlos Tejo Alonso, Alexey Zakhlestin
author_email = rdflib-dev@googlegroups.com
url = http://rdflib.github.io/sparqlwrapper
download_url = https://github.com/RDFLib/sparqlwrapper/releases
platforms =
    any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: W3C License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    python
    sparql
    rdf
    rdflib
project_urls =
    Home = https://rdflib.github.io/sparqlwrapper
    Documentation = https://sparqlwrapper.readthedocs.io
    Source = https://github.com/RDFLib/sparqlwrapper
    Tracker = https://github.com/RDFLib/sparqlwrapper/issues

[options]
packages =
    SPARQLWrapper
install_requires =
    rdflib>=6.1.1
python_requires = >= 3.7

[options.package_data]
SPARQLWrapper = py.typed

[options.extras_require]
dev =
    setuptools>=3.7.1
    mypy>=0.931
    pandas>=1.3.5
    pandas-stubs>=1.2.0.48

pandas =
    pandas>=1.3.5
keepalive =
    keepalive>=0.5
docs =
    sphinx < 5
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    rqw = SPARQLWrapper.main:main

[mypy]
files = SPARQLWrapper
python_version = 3.7
show_error_codes = True
strict = True
pretty = True
warn_unused_configs = True
warn_unused_ignores = True
warn_unreachable = True
